# dployer

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh
.github/workflows/: cmake-single-platform.yml
config/: repositories.db
config/laravel/: Dockerfile  laravel-init.sh  php.ini  php82.dockerfile  queue.conf  vhost.conf
config/static-php/: Dockerfile  vhost.conf
include/: database.h  deploy.h  docker.h  logger.h  repo.h  utils.h
src/: database.c  deploy.c  docker.c  logger.c  main.c  repo.c  utils.c
